# intellitrail

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_geojson.py  test_verify_04_04.py  test_verify_04_04_error.py
auxiliary_code/: _http.py  aemet.py  database.py  geocoding.py  geometry.py  gpx_helpers.py  tools.py  utils.py  weather.py  weather_alerts.py  weather_mountains.py
data/: projectdb.db
notebooks/: nb_graph.ipynb
presentation/: index.html  speaker_notes.md
src/: config.py
src/agent/: difficulty.py  elevation_analysis.py  graph.py  hiking_time.py  nodes.py  prompts.py  tools.py  voice_recorder.py  wikiloc_scraper.py
src/alternatives/: overpass.py  tools.py
src/api/: server.py  streaming.py
src/ingestion/: errors.py  geojson_parser.py  gpx_parser.py
src/models/: geometry.py  state.py  verdict.py
src/rag/: index.py  loader.py  retriever.py
src/weather/: alerts.py  client.py  fetcher.py  geometry.py  models.py  mountain_forecast.py  zone_mapper.py
src/weather/data/: municipios_ine.json
static/: app.js  index.html  styles.css
tests/: test_gpx_parser.py  test_verdict.py
tests/fixtures/: empty_track.gpx  multi_segment.gpx  no_elevation.gpx  simple_track.gpx
tests/weather/: test_client.py  test_models.py  test_zone_mapper.py
