[project]
name = "mountain-safety-agent"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "langgraph>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "geopandas>=1.0",
    "pyproj>=3.6",
    "shapely>=2.0",
    "numpy>=1.26",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "faiss-cpu>=1.7",
    "pypdf>=4.0",
    "serpapi>=0.1.5",
    "playwright>=1.58.0",
    "fastapi[standard]>=0.133",
    "questionary>=2.1.1",
    "sounddevice>=0.4.7",
    "scipy>=1.13.0",
    "soundfile>=0.12.1",
    "pinecone>=6.0.2",
    "aiohttp>=3.13.3",
    "langchain-pinecone>=0.2.0",
    "ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.36.0",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
